[package]
name = "json2jsonl"
version = "0.1.0"
authors = ["Šarūnas Navickas <zaibacu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# JSON parsing
nop-json = "2.0.4"
read_iter = "*"

# CLI
structopt = "0.3.13"

# Logging
log = "0.4"
env_logger = "0.7.1"